src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision.stderr
error: unexpected token: `,`
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:15:15
   |
LL |         [_, 99.., _] => {}, //~ ERROR unexpected token: `,`
   |               ^^

error: aborting due to previous error

